# Numerical-Calculator

./: .gitignore  CMakeLists.txt  README.md
include/: differentiation.h  interpolation.h  inversion.h  linear.h  non-linear_equation.h  regression.h  rk_method.h  simpson.h
src/: input.txt  main.cpp  output.txt  theory.txt
src/algorithm/: input.txt  interpolation.cpp  output.txt  theory.txt
src/algorithm/RK_Method/: input.txt  output.txt  rk.cpp  theory.txt
src/algorithm/bisection/: bisection.cpp  input.txt  output.txt  theory.txt
src/algorithm/differentiation_backward/: differentiation_backward.cpp  input.txt  output.txt  theory.txt
src/algorithm/differentiation_forward/: differentiation_forward.cpp  input.txt  output.txt  theory.txt
src/algorithm/falsi/: falsi.cpp  input.txt  output.txt  theory.txt
src/algorithm/gauss_elimination/: gauss_elimination.cpp  input.txt  output.txt  theory.txt
src/algorithm/gauss_jordan/: gauss_jordan.cpp  input.txt  output.txt  theory.txt
src/algorithm/interpolation/: input.txt  interpolation.cpp  output.txt  theory.txt
src/algorithm/inverse/: naive_inverse.cpp
src/algorithm/linear/: gausselimination.cpp  gaussjordan.cpp  ludecomposition.cpp
src/algorithm/lu_decomposition/: input.txt  lu_decomposition.cpp  output.txt  theory.txt
src/algorithm/naive_inverse/: input.txt  naive_inverse.cpp  output.txt  theory.txt
src/algorithm/newton_raphson/: input.txt  newton_raphson.cpp  output.txt  theory.txt
src/algorithm/non_linear_equation/: bisection.cpp  falsi.cpp  newton_raphson.cpp  (+1 more)
tests/: input.txt  output.txt
(+19 files in other folders)
